@@ -40,7 +40,7 @@ public class DownloadFromCommonCrawl {
 				}
 
 				double percentage = (double)(bytes)/COMMON_CRAWL_FILE.length()*100;
-				log.info("Downloading line " + (count+1) + ": " + String.format("%.4f", percentage) + "%, having " +
+				log.info("Downloading line " + (count+1) + ": " + "%.4f".formatted(percentage) + "%, having " +
                         downloaded + " downloaded: " + StringUtils.abbreviate(line, 50) +
 						(fileNameTooLong > 0 ? ", " + fileNameTooLong + " file-names too long" : ""));
 				CDXItem item = CDXItem.parse(line);
